--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,8 +24,8 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
@@ -42,4 +42,18 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:3.7.0'
     //圆形图片
     implementation 'de.hdodenhof:circleimageview:2.2.0'
+    //    //IDCardCamera
+    //    implementation 'com.github.wildma:IDCardCamera:1.0.1'
+    implementation files('libs/javabuilder.jar')
+    implementation files('libs/z_im.jar')
+
+    //网络请求
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.3'
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    implementation 'com.squareup.okhttp3:okhttp:3.9.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.9.0'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.3.0'
 }
