--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,9 +21,11 @@
         </activity>
         <activity android:name=".mvp.activity.DisposePictureActivity"/>
         <activity android:name=".camera.CameraActivity"
-            android:configChanges="keyboardHidden|orientation|screenSize"
             android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen"/>
         <activity android:name=".mvp.activity.RegisterActivity"/>
+        <activity android:name=".mvp.activity.RegisterTwoActivity" />
+        <activity android:name=".mvp.activity.MatchActivity"/>
+
         <provider
             android:name="android.support.v4.content.FileProvider"
             android:authorities="com.example.hp.challengecup.fileprovider"
