onConfiguration中进行布局变换和预览旋转，放弃之前那种重新加载布局的方法，之后可以尝试fragment的方法

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         </activity>
         <activity android:name=".mvp.activity.DisposePictureActivity"/>
         <activity android:name=".camera.CameraActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
             android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen"/>
         <activity android:name=".mvp.activity.RegisterActivity"/>
         <activity android:name=".mvp.activity.RegisterTwoActivity" />
