添加CameraActivity2，尝试使用Fragment替换顶层布局，由于textView无法横向，以失败告终，去掉textview可行

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,8 @@
         <activity android:name=".camera.CameraActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen"/>
+        <activity android:name=".camera.CameraActivity2"
+            android:theme="@style/AppCompatFullScreenTheme" />
         <activity android:name=".mvp.activity.RegisterActivity"/>
         <activity android:name=".mvp.activity.RegisterTwoActivity" />
         <activity android:name=".mvp.activity.MatchActivity"/>
