--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,9 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:3.7.0'
     //圆形图片
     implementation 'de.hdodenhof:circleimageview:2.2.0'
+    //圆角ViewGroup
+    implementation 'com.github.fxc0719:RoundCornerLayout:1.0.2'
+    implementation 'com.skyline.widget:round-corner-layout:1.0.1'
 
 
     //网络请求
