--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,11 @@
 buildscript {
     ext.kotlin_version = '1.2.30'
     repositories {
+        maven { url 'https://maven.fabric.io/public' }
+        maven { url 'https://maven.aliyun.com/repository/google' }
+        maven {
+            url 'https://maven.aliyun.com/repository/jcenter'
+        }
         google()
         jcenter()
     }
@@ -18,9 +23,16 @@ buildscript {
 
 allprojects {
     repositories {
+        maven { url 'https://maven.fabric.io/public' }
+        maven { url 'https://www.jitpack.io' }
+        maven { url 'https://maven.aliyun.com/repository/google' }
+        maven { url 'https://maven.aliyun.com/repository/jcenter' }
+        maven{
+            url "https://raw.github.com/bmob/bmob-android-sdk/master"
+        }
         google()
         jcenter()
-        maven{ url 'https://jitpack.io'}
+
     }
 }
 
